src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_deep_nesting_blocks.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Block(
                                    Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Block(
                                                    Block {
                                                        statements: [],
                                                        expr: Some(
                                                            Expr {
                                                                kind: Block(
                                                                    Block {
                                                                        statements: [],
                                                                        expr: Some(
                                                                            Expr {
                                                                                kind: Block(
                                                                                    Block {
                                                                                        statements: [],
                                                                                        expr: Some(
                                                                                            Expr {
                                                                                                kind: Block(
                                                                                                    Block {
                                                                                                        statements: [],
                                                                                                        expr: Some(
                                                                                                            Expr {
                                                                                                                kind: Block(
                                                                                                                    Block {
                                                                                                                        statements: [],
                                                                                                                        expr: Some(
                                                                                                                            Expr {
                                                                                                                                kind: Path(
                                                                                                                                    ExprPath {
                                                                                                                                        segments: [
                                                                                                                                            ExprPathSegment {
                                                                                                                                                name: Spanned {
                                                                                                                                                    node: SymbolU32 {
                                                                                                                                                        value: 2,
                                                                                                                                                    },
                                                                                                                                                    span: Span {
                                                                                                                                                        start: 21,
                                                                                                                                                        end: 22,
                                                                                                                                                        start_line: 1,
                                                                                                                                                        start_col: 22,
                                                                                                                                                    },
                                                                                                                                                },
                                                                                                                                                args: None,
                                                                                                                                            },
                                                                                                                                        ],
                                                                                                                                        span: Span {
                                                                                                                                            start: 21,
                                                                                                                                            end: 22,
                                                                                                                                            start_line: 1,
                                                                                                                                            start_col: 22,
                                                                                                                                        },
                                                                                                                                    },
                                                                                                                                ),
                                                                                                                                span: Span {
                                                                                                                                    start: 21,
                                                                                                                                    end: 22,
                                                                                                                                    start_line: 1,
                                                                                                                                    start_col: 22,
                                                                                                                                },
                                                                                                                            },
                                                                                                                        ),
                                                                                                                        span: Span {
                                                                                                                            start: 19,
                                                                                                                            end: 24,
                                                                                                                            start_line: 1,
                                                                                                                            start_col: 20,
                                                                                                                        },
                                                                                                                    },
                                                                                                                ),
                                                                                                                span: Span {
                                                                                                                    start: 19,
                                                                                                                    end: 24,
                                                                                                                    start_line: 1,
                                                                                                                    start_col: 20,
                                                                                                                },
                                                                                                            },
                                                                                                        ),
                                                                                                        span: Span {
                                                                                                            start: 17,
                                                                                                            end: 26,
                                                                                                            start_line: 1,
                                                                                                            start_col: 18,
                                                                                                        },
                                                                                                    },
                                                                                                ),
                                                                                                span: Span {
                                                                                                    start: 17,
                                                                                                    end: 26,
                                                                                                    start_line: 1,
                                                                                                    start_col: 18,
                                                                                                },
                                                                                            },
                                                                                        ),
                                                                                        span: Span {
                                                                                            start: 15,
                                                                                            end: 28,
                                                                                            start_line: 1,
                                                                                            start_col: 16,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                                span: Span {
                                                                                    start: 15,
                                                                                    end: 28,
                                                                                    start_line: 1,
                                                                                    start_col: 16,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 13,
                                                                            end: 30,
                                                                            start_line: 1,
                                                                            start_col: 14,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 13,
                                                                    end: 30,
                                                                    start_line: 1,
                                                                    start_col: 14,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 11,
                                                            end: 32,
                                                            start_line: 1,
                                                            start_col: 12,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 11,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 12,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 9,
                                            end: 34,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 34,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 36,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 36,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 36,
        start_line: 1,
        start_col: 1,
    },
}
