src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_empty_impl.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Impl(
            ImplBlock {
                attrs: [],
                type_params: None,
                trait_ty: None,
                self_ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 1,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 10,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 5,
                                end: 10,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                    ),
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                where_clause: None,
                items: [],
                span: Span {
                    start: 0,
                    end: 13,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 13,
        start_line: 1,
        start_col: 1,
    },
}
