src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_empty_trait.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Trait(
            TraitDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 6,
                        end: 12,
                        start_line: 1,
                        start_col: 7,
                    },
                },
                type_params: None,
                supertraits: [],
                where_clause: None,
                items: [],
                span: Span {
                    start: 0,
                    end: 15,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 15,
        start_line: 1,
        start_col: 1,
    },
}
